test/ppx_repr/deriver/errors/unsupported_type_arrow.ml
type t = unit -> int [@@deriving repr]
